# RISE2023

./: .gitignore  CMakeLists.txt  CREDITS.md  LICENSE.md  README.md  controller_config - Shortcut.lnk  game_actions_480.vdf  run.bat  steam_controller.vdf  steam_input_manifest.vdf
assets/: monochrome_tilemap_transparent.pdn
cmake/: FindSDL2_image.cmake  FindSteamworks.cmake
include/: Camera.h  EzInputSys.h  EzSoundSys.h  Manager.h  Material.h  Mesh.h  Nickable.h  Scene.h  Shader.h  SpriteSheet.h  Texture.h  aces.h  aecs.h  misc.h  tkev3.h
include/actors/: Player.cpp  Player.hpp
include/components/: PlayerHUD.h  Sprite.h  Sprite.hpp  UserInterface.h
include/scenes/: LightTest.h  Test.h  TestScene.hpp
project/: song1.bak  song1.mptm
project/music/: song1.bak  song1.mptm  song1.mptm.AutoSave.20230411.193344.mptm  song1.mptm.AutoSave.20230411.194345.mptm  song1.mptm.AutoSave.20230411.195345.mptm
res/: CMakeLists.txt  icon.pdn  icon_ico.pdn
smog/: CMakeLists.txt  README.md  smog.cpp  smog.h
smog/cmake/: FindSteamworks.cmake
src/: Camera.cpp  EzInputSys.cpp  EzSoundSys.cpp  Manager.cpp  Nickable.cpp  Scene.cpp  SpriteSheet.cpp  aces.cpp  aecs.cpp  main.cpp
